# clan

./: .gitignore  README.md  clan.cabal  stack.yaml
src/: Main.hs
src/Analyze/: Analyze.hs  AstProc.hs  Extract.hs  Parse.hs  TreeBuilder.hs
