name:                clan
version:             0.1.0
synopsis:            Simple tool to analyze inheritance hierarchies of java classes
description:         Please see README.md
homepage:            https://github.com/jhrcek/clan
license:             BSD3
license-file:        LICENSE
author:              Jan Hrček
maintainer:          honza.hrk@gmail.com
copyright:           2016 Jan Hrček
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable clan
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Analyze.AstProc
                     , Analyze.Extract
                     , Analyze.TreeBuilder
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , containers
                     , filepath
                     , language-java
                     , parsec
                     , text
  default-language:    Haskell2010

test-suite clan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jhrcek/clan
